Simple-grid doesn't work online, tried to put file directly in root dir.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <script src="https://unpkg.com/@rgrove/parse-xml/dist/umd/parse-xml.min.js"></script>
     <script src="utils.js"></script>
     <script src="MusicXMLReader.js"></script>
-    <link rel="stylesheet" type="text/css" href="grid/simple-grid.min.css">
+    <!-- <link rel="stylesheet" type="text/css" href="grid/simple-grid.min.css"> -->
+    <link rel="stylesheet" type="text/css" href="simple-grid.min.css">
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
    
