Added song title and instruments.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
          </note>
        </svg>
     </div> -->
-
+    <h2 id="songName"></h2>
     <div id="matrixRowContainer" class="container">
     </div>
 
