--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <div id="music-menu" class="dropdown">
       <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">
-        Tutorials<span class="caret"></span>
+        Select your song<span class="caret"></span>
       </button>
       <ul id="genre-ul" class="dropdown-menu">
 
