Now matrices are displayed as soon as ready

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
         </div>
 
-        <!-- <br/>MusicXML file : <input type='file' id="musicSheet" accept='text/xml' onclick="this.value = null;" onchange='readMusicXMLFile(event)' multiple> -->
+        <br/>MusicXML file : <input type='file' id="musicSheet" accept='text/xml' onclick="this.value = null;" onchange='readMusicXMLFile(event)' multiple>
         Number of notes in a repetition: <input type="number" id="nbNotesInRep" name="nbNotesInRep" min="1" max="50" value="2">
         <!-- Max number of instruments to be displayed : <input type="number" id="maxNbParts" name="maxNbParts" min="1" max="50" value="5"> -->
         
@@ -62,7 +62,7 @@
         
         Color squares :<input type="checkbox" id="squaresAreColored" name="squaresAreColored"> <br>
 
-        Real duration :<input type="checkbox" id="realDuration" name="realDuration"> <br>
+        Real duration :<input type="checkbox" id="realDuration" name="realDuration" checked> <br>
 
         <!-- Full square :<input type="checkbox" id="fullSquare" name="fullSquare" checked> <br> -->
 
