--- a/index.html
+++ b/index.html
@@ -47,13 +47,16 @@
             </div>
           </div>
 
-          <div id="song-info" class="flex-container" >
-            <h2><span id="song-name"></span> <span id="artist"></span></h2>
+          <div class="container-vertical">
+            <div id="song-info" class="flex-container" >
+              <h2><span id="song-name"></span> <span id="artist"></span></h2>
+            </div>
+
+            <div class="parameters flex-container">
+              <span>Number of notes in a repetition: </span><input type="number" id="nbNotesInRep" name="nbNotesInRep" min="1" max="50" value="2">
+            </div>
           </div>
 
-        </div>
-        <div class="parameters">
-          Number of notes in a repetition: <input type="number" id="nbNotesInRep" name="nbNotesInRep" min="1" max="50" value="2">
         </div>
         <!-- Max number of instruments to be displayed : <input type="number" id="maxNbParts" name="maxNbParts" min="1" max="50" value="5"> -->
         
