--- a/index.html
+++ b/index.html
@@ -82,6 +82,11 @@
               <button id="description-less"><span class="caret caret-up"></span> Less</button>
             </p>
           </div>
+          <br/>
+          <br/>
+          <p style="float: right;">
+              <strong>Sixtine Philippe</strong> x <strong>Nicolas Patschkowski</strong>
+            </p>
         </div>
         <div id="custom-file">
           Or upload your own MusicXML file:
