Commented reference to Colin Morris

--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
             </p>
             <p>
               You can modify the <em>number of notes in a repetition</em> in order to select melodies that are longer or shorter. If you select 5, for instance, you will only see the notes that belong to a melody of 5 notes or more and that is repeted at least twice across the song.
-            </p>
+            <!-- </p>
             <p>
-              This project was largely inspired by the work <a href="https://colinmorris.github.io/SongSim/">SongSim</a> by <strong>Colin Morris</strong>, a tool that shows the repetition in the lyrics of songs.
+              This project was largely inspired by the work <a href="https://colinmorris.github.io/SongSim/">SongSim</a> by <strong>Colin Morris</strong>, a tool that shows the repetition in the lyrics of songs. -->
               <button id="description-less"><span class="caret caret-up"></span> Less</button>
             </p>
           </div>
