Minor layout changes

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
               <h2><span id="song-name"></span> <span id="artist"></span></h2>
             </div>
 
-            <div class="parameters flex-container">
+            <div class="parameters">
               <span>Number of notes in a repetition: </span><input type="number" id="nbNotesInRep" name="nbNotesInRep" min="1" max="50" value="2">
             </div>
           </div>
@@ -87,7 +87,7 @@
           </div>
           <br/>
           <br/>
-          <p style="float: right;">
+          <p class="signature">
               <strong>Sixtine Philippe</strong> x <strong>Nicolas Patschkowski</strong>
             </p>
         </div>
