--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <button id="description-toggler">What is MOTIF?</button>
           <div id="description-content">
             <p>
-              This project aims at showing the repetition in music. Select a song, and you will see, for each instrument playing in the song, the pattern that create the notes, the <em>signature</em> of the instrument. On a <em>signature</em>, each column and each rown corresponds to a note. When a pixel is lit up, it means that the two corresponding notes (the one of the row and the one of the column) are the same.
+              This project aims at showing the repetition in music. Select a song, and you will see, for each instrument playing in the song, the pattern that the notes create, the <em>signature</em> of the instrument. On a <em>signature</em>, each column and each rown corresponds to a note. When a pixel is lit up, it means that the two corresponding notes (the one of the row and the one of the column) are the same.
             </p>
             <p>
               You can modify the <em>number of notes in a repetition</em> in order to select melodies that are longer or shorter. If you select 5, for instance, you will only see the notes that belong to a melody of 5 notes or more and that is repeted at least twice across the song.
