--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 
     <link rel="stylesheet" type="text/css" href="grid/simple-grid.min.css">
     <link rel="stylesheet" type="text/css" href="simple-grid.min.css">
+
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
   </head>
    
 
