Changed structure of files

--- a/index.html
+++ b/index.html
@@ -8,20 +8,19 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/canvg/1.4/rgbcolor.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/canvg/dist/browser/canvg.min.js"></script>
     
-    <script src='jquery-1.8.1.js'></script>
+    <script src='js/jquery-1.8.1.js'></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://unpkg.com/@rgrove/parse-xml/dist/umd/parse-xml.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-    <script src="utils.js"></script>
-    <script src="MusicXMLReader.js"></script>
+    <script src="js/utils.js"></script>
+    <script src="js/MusicXMLReader.js"></script>
 
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-    <link href="css/animate.min.css" rel="stylesheet">
     <link href="css/bootstrap-dropdownhover.min.css" rel="stylesheet">
 
     <link rel="stylesheet" type="text/css" href="grid/simple-grid.min.css">
-    <link rel="stylesheet" type="text/css" href="simple-grid.min.css">
+    <link rel="stylesheet" type="text/css" href="css/simple-grid.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 
 
@@ -134,7 +133,7 @@
 
   </body>
 
-  <script src="script.js"></script>
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <script src="js/script.js"></script>
+  <link rel="stylesheet" type="text/css" href="css/style.css">
   <script src="js/bootstrap-dropdownhover.min.js"></script>
 </html>
