--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <!-- <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script> -->
-    <script type="text/javascript" src="music-info.json"></script>
+    <script type="text/javascript" src="music-info.js"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/canvg/1.4/rgbcolor.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/canvg/dist/browser/canvg.min.js"></script>
@@ -14,6 +14,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <script src="js/utils.js"></script>
     <script src="js/MusicXMLReader.js"></script>
+    <script src="js/script.js"></script>
 
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
@@ -133,7 +134,7 @@
 
   </body>
 
-  <script src="js/script.js"></script>
+  <script src="js/index.js"></script>
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <script src="js/bootstrap-dropdownhover.min.js"></script>
 </html>
